--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,5 @@ name = "worm"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+worm_derive = { path = "./worm_derive" }
