--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ edition = "2018"
 
 [dependencies]
 worm_derive = { path = "./worm_derive" }
+rusqlite = { version = "0.25", features = [ "bundled", "chrono" ] }
